hphp/test/quick/memoize_args.php.expectf

Fatal error: <<__Memoize>> currently only supports methods with zero args in %s/test/quick/memoize_args.php on line 4
